k8s/auth-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-ms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth-ms
  template:
    metadata:
      labels:
        component: auth-ms
    spec:
      containers:
      - name: auth-ms
        image: europe-west3-docker.pkg.dev/exploringmicroservices/exploringmicroservices/auth-ms:latest
        ports:
        - containerPort: 4000
      imagePullSecrets:
      - name: k8s-gcloud
