k8s/auth-ms-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-ms-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: auth-ms
  ports:
    - port: 4000
      targetPort: 4000
