k8s/auth-ms-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-ms-node-port
spec:
  type: NodePort
  # Ports to expose on the selected objects
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30410
  selector:
    # Label of the pod that we want to expose
    component: auth-ms
