k8s/users-db-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-db-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: users-db-deployment
  ports:
    - port: 5432
      targetPort: 5432
