k8s/users-db.yaml

# ---- DEPLOYMENT ----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: users-db
  template:
    metadata:
      labels:
        component: users-db
    spec:
      volumes:
      - name: users-db-storage
        persistentVolumeClaim:
          claimName: db-pvc
      containers:
      - name: users-db
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: users-db-storage
          mountPath: /var/lib/postgresql/data
          subPath: users
  strategy:
    type: Recreate

---
# ---- NODE PORT SERVICE ----
# This is a service that exposes the users-db pod to the outside world
# Used to access the database from outside the cluster for development purposes
# Disable this service in production

apiVersion: v1
kind: Service
metadata:
  name: users-db-node-port
spec:
  type: NodePort
  # Ports to expose on the selected objects
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30432
  selector:
    # Label of the pod that we want to expose
    component: users-db
---
# ---- CLUSTER IP SERVICE ----
apiVersion: v1
kind: Service
metadata:
  name: users-db-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: users-db
  ports:
    - port: 5432
      targetPort: 5432
