k8s/users-ms-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-ms-cluster-ip-service
spec:
  selector:
    component: users-ms
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
