k8s/users-ms-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-ms-node-port
spec:
  type: NodePort
  # Ports to expose on the selected objects
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30400
  selector:
    # Label of the pod that we want to expose
    component: users-ms
