k8s/users-ms.yaml


# ----- DEPLOYMENT -----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-ms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: users-ms
  template:
    metadata:
      labels:
        component: users-ms
    spec:
      containers:
      - name: users-ms
        image: europe-west3-docker.pkg.dev/exploringmicroservices/exploringmicroservices/users-ms:latest
        ports:
        - containerPort: 4000
        livenessProbe:
          httpGet:
            path: /users-ms/healthcheck
            port: 4000
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: k8s-gcloud
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
---
# ----- NODE PORT SERVICE -----
apiVersion: v1
kind: Service
metadata:
  name: users-ms-node-port
spec:
  type: NodePort
  # Ports to expose on the selected objects
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30400
  selector:
    # Label of the pod that we want to expose
    component: users-ms
---
# ----- CLUSTER IP SERVICE -----
apiVersion: v1
kind: Service
metadata:
  name: users-ms-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: users-ms
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
